@@ -66,6 +66,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Add anchor links to StreamField blocks so users can navigate straight to a given block (Thibaud Colas)
  * Support "Ctrl + f" in-page search within collapsed StreamField blocks (Thibaud Colas)
  * Remember the last opened side panel in the page editor, activating it on page load (Sage Abdullah)
+ * Ensure that the [`update_index`](update_index) command can run without console output if called with `--verbosity 0` (Ben Sturmfels, Oliver Parker)
 
 ### Bug fixes
 
